kubernetes/nginx-ingress-service.yml
kind: Service
apiVersion: v1
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30080   # must be reachable externally (map via firewall)
  - name: https
    port: 443
    targetPort: 443
    nodePort: 30443   # must be reachable externally
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
